<resources>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!--Login Screen-->
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="dont_have_account">Não tem uma conta? Cadastre-se</string>
    <string name="login_error">Erro ao realizar login</string>
    <!--Login Screen **END**-->

    <!--Register Screen-->
    <string name="register">Cadastro</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="full_name">Nome e sobrenome</string>
    <string name="confirm_password">Confirme sua senha</string>
    <string name="have_account">Já tem uma conta? Entre</string>
    <string name="password_equals_error">As senhas precisam ser iguais</string>
    <string name="password_error">Insira uma senha</string>
    <string name="email_error">Insira um e-mail</string>
    <string name="username_error">Insira seu nome e sobrenome</string>
    <string name="minimum_characters">8 caracteres *</string>
    <string name="upper_letter">maiúscula *</string>
    <string name="lower_letter">minúscula *</string>
    <string name="number">número *</string>
    <string name="register_error">Erro ao realizar cadastro</string>
    <!--Register Screen **END**-->

    <!--Drawer-->
    <string name="logout">Sair</string>
    <string name="profile">Perfil</string>
    <string name="customize_app">Personalizar</string>
    <string name="logged_message">Faça login para utilizar todos os recursos do app</string>
    <!--Drawer **END**-->

    <!--Create Action-->
    <string name="create_action_title">Criar novo cartão</string>
    <string name="edit_action_title">Editar cartão</string>
    <string name="card_name">Nome do cartão</string>
    <string name="select_image">Selecione uma imagem</string>
    <string name="select_audio">Selecione um áudio</string>
    <string name="select_another_image">Selecione outra imagem</string>
    <string name="select_category">Selecione uma categoria</string>
    <string name="select_subcategory">Selecione uma subcategoria</string>
    <string name="preview">Pré visualização</string>
    <string name="add_image">Adicionar imagem</string>
    <string name="add_audio">Adicionar áudio</string>
    <string name="camera">Câmera</string>
    <string name="gallery">Galeria</string>
    <string name="image_error">Erro ao carregar imagem</string>
    <string name="use_this_image">Usar esta imagem</string>
    <string name="use_this_audio">Usar este áudio</string>
    <string name="record_audio">Gravar</string>
    <string name="record_audio_error">Ocorreu um erro ao gravar o áudio</string>
    <string name="stop_recording">Parar</string>
    <string name="pick_audio">Buscar áudio</string>
    <string name="audio_max_time">Tempo máximo de 3 segundos</string>
    <string name="subcategories">Subcategorias</string>
    <string name="save_success">Cartão salvo com sucesso</string>
    <string name="create_action_error">Erro ao criar cartão</string>
    <string name="empty_card_data_error">Preencha todos os campos</string>
    <string name="should_permission">Permissão necessária</string>
    <string name="permission_message">Para utilizar esta funcionalidade, é necessário habilitar a permissão ao <b>Microfone</b> do dispositivo</string>
    <string name="permission_recused"><u>Negar e sair</u></string>
    <string name="go_to_settings">Ir para configurações</string>
    <!--Create Action **END**-->

    <!--Menu Card Screen-->
    <string name="my_cards">Meus cartões</string>
    <string name="delete">Excluir</string>
    <string name="delete_card_error">Erro ao excluir cartão</string>
    <string name="add_new_card">Novo cartão</string>
    <string name="empty_user_list">Nenhum cartão encontrado</string>
    <!--Menu Card Screen **END**-->
</resources>