<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlChooseAudio"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvChooseAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_audio"
                android:tint="@color/blue_sky_600" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_audio"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvAudioPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                app:cardCornerRadius="8dp"
                app:cardElevation="1dp"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPreviewAudioName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:ellipsize="end"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/ivPreviewAudioReproduce"
                        app:layout_constraintEnd_toStartOf="@id/ivDeleteAudioPreview"
                        app:layout_constraintStart_toEndOf="@+id/ivPreviewAudioReproduce"
                        app:layout_constraintTop_toTopOf="@+id/ivPreviewAudioReproduce"
                        tools:text="Nome do áudio" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivPreviewAudioReproduce"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginVertical="14dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/ic_play"
                        android:tint="@color/blue_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/ivDeleteAudioPreview"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_delete"
                        android:tint="@color/red_600"
                        app:layout_constraintBottom_toBottomOf="@id/ivPreviewAudioReproduce"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ivPreviewAudioReproduce" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btRecordAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="0.3"
                android:paddingHorizontal="20dp"
                android:text="@string/record_audio"
                app:icon="@drawable/ic_mic"
                app:iconGravity="start"
                app:iconPadding="10dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAudioMaxTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/audio_max_time"
                android:textAlignment="center"
                android:textColor="@color/red_600" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvUseThisAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/use_this_audio"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivConfirmAudio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_check"
                android:tint="@color/green_600"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>